// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse "quoted" bare 1`] = `
Scalar {
  "range": Range {
    "end": 7,
    "start": 0,
  },
  "raw": "\\"value\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 7,
    "start": 0,
  },
}
`;

exports[`parse "quoted" complex mapping key 1`] = `
Scalar {
  "range": Range {
    "end": 10,
    "start": 2,
  },
  "raw": "\\"value\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse "quoted" escaped 1`] = `
Scalar {
  "range": Range {
    "end": 34,
    "start": 1,
  },
  "raw": "\\" #value\\\\\\\\
with \\\\\\"more\\\\\\" lines\\\\\\"\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 34,
    "start": 1,
  },
}
`;

exports[`parse "quoted" flow seq value 1`] = `
Scalar {
  "range": Range {
    "end": 10,
    "start": 2,
  },
  "raw": "\\"value\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse "quoted" indented block 1`] = `
Scalar {
  "range": Range {
    "end": 13,
    "start": 6,
  },
  "raw": "\\"value\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 13,
    "start": 6,
  },
}
`;

exports[`parse "quoted" multi-line 1`] = `
Scalar {
  "range": Range {
    "end": 24,
    "start": 1,
  },
  "raw": "\\"value
with
more lines\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 24,
    "start": 1,
  },
}
`;

exports[`parse "quoted" newline before & after 1`] = `
Scalar {
  "range": Range {
    "end": 8,
    "start": 1,
  },
  "raw": "\\"value\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 8,
    "start": 1,
  },
}
`;

exports[`parse "quoted" seq value 1`] = `
Scalar {
  "range": Range {
    "end": 9,
    "start": 2,
  },
  "raw": "\\"value\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse "quoted" with comment 1`] = `
Scalar {
  "commentRange": Range {
    "end": 27,
    "start": 12,
  },
  "range": Range {
    "end": 27,
    "start": 3,
  },
  "raw": "\\"value\\"",
  "rawComment": "comment # here!",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 10,
    "start": 3,
  },
}
`;

exports[`parse "quoted" with props 1`] = `
Scalar {
  "anchor": "anchor",
  "range": Range {
    "end": 23,
    "start": 2,
  },
  "raw": "\\"value\\"",
  "tag": "tag!",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 23,
    "start": 16,
  },
}
`;

exports[`parse "quoted" without spaces 1`] = `
Scalar {
  "range": Range {
    "end": 8,
    "start": 1,
  },
  "raw": "\\"value\\"",
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 8,
    "start": 1,
  },
}
`;

exports[`parse #comments bare 1`] = `
Scalar {
  "commentRange": Range {
    "end": 17,
    "start": 2,
  },
  "range": Range {
    "end": 17,
    "start": 0,
  },
  "raw": "",
  "rawComment": "comment # here!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 1,
    "start": 1,
  },
}
`;

exports[`parse #comments complex mapping key 1`] = `
Scalar {
  "commentRange": Range {
    "end": 19,
    "start": 4,
  },
  "range": Range {
    "end": 19,
    "start": 2,
  },
  "raw": "",
  "rawComment": "comment # here!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 3,
    "start": 3,
  },
}
`;

exports[`parse #comments indented block 1`] = `
Scalar {
  "commentRange": Range {
    "end": 23,
    "start": 8,
  },
  "range": Range {
    "end": 23,
    "start": 6,
  },
  "raw": "",
  "rawComment": "comment # here!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 7,
    "start": 7,
  },
}
`;

exports[`parse #comments newline before & after 1`] = `
Scalar {
  "commentRange": Range {
    "end": 18,
    "start": 3,
  },
  "range": Range {
    "end": 18,
    "start": 1,
  },
  "raw": "",
  "rawComment": "comment # here!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 2,
    "start": 2,
  },
}
`;

exports[`parse #comments seq value 1`] = `
Scalar {
  "commentRange": Range {
    "end": 19,
    "start": 4,
  },
  "range": Range {
    "end": 19,
    "start": 2,
  },
  "raw": "",
  "rawComment": "comment # here!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 3,
    "start": 3,
  },
}
`;

exports[`parse %directives TAG 1`] = `
Scalar {
  "range": Range {
    "end": 30,
    "start": 0,
  },
  "raw": "TAG !yaml! tag:yaml.org,2002:",
  "type": "DIRECTIVE",
  "valueRange": Range {
    "end": 30,
    "start": 1,
  },
}
`;

exports[`parse %directives YAML with comment 1`] = `
Scalar {
  "commentRange": Range {
    "end": 18,
    "start": 11,
  },
  "range": Range {
    "end": 18,
    "start": 0,
  },
  "raw": "YAML 1.2",
  "rawComment": "comment",
  "type": "DIRECTIVE",
  "valueRange": Range {
    "end": 9,
    "start": 1,
  },
}
`;

exports[`parse 'quoted' bare 1`] = `
Scalar {
  "range": Range {
    "end": 7,
    "start": 0,
  },
  "raw": "'value'",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 7,
    "start": 0,
  },
}
`;

exports[`parse 'quoted' complex mapping key 1`] = `
Scalar {
  "range": Range {
    "end": 10,
    "start": 2,
  },
  "raw": "'value'",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse 'quoted' escaped 1`] = `
Scalar {
  "range": Range {
    "end": 32,
    "start": 1,
  },
  "raw": "' #value
with ''more'' lines'''",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 32,
    "start": 1,
  },
}
`;

exports[`parse 'quoted' flow seq value 1`] = `
Scalar {
  "range": Range {
    "end": 10,
    "start": 2,
  },
  "raw": "'value'",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse 'quoted' indented block 1`] = `
Scalar {
  "range": Range {
    "end": 13,
    "start": 6,
  },
  "raw": "'value'",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 13,
    "start": 6,
  },
}
`;

exports[`parse 'quoted' multi-line 1`] = `
Scalar {
  "range": Range {
    "end": 24,
    "start": 1,
  },
  "raw": "'value
with
more lines'",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 24,
    "start": 1,
  },
}
`;

exports[`parse 'quoted' newline before & after 1`] = `
Scalar {
  "range": Range {
    "end": 8,
    "start": 1,
  },
  "raw": "'value'",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 8,
    "start": 1,
  },
}
`;

exports[`parse 'quoted' seq value 1`] = `
Scalar {
  "range": Range {
    "end": 9,
    "start": 2,
  },
  "raw": "'value'",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse 'quoted' with comment 1`] = `
Scalar {
  "commentRange": Range {
    "end": 27,
    "start": 12,
  },
  "range": Range {
    "end": 27,
    "start": 3,
  },
  "raw": "'value'",
  "rawComment": "comment # here!",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 10,
    "start": 3,
  },
}
`;

exports[`parse 'quoted' with props 1`] = `
Scalar {
  "anchor": "anchor",
  "range": Range {
    "end": 23,
    "start": 2,
  },
  "raw": "'value'",
  "tag": "tag!",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 23,
    "start": 16,
  },
}
`;

exports[`parse 'quoted' without spaces 1`] = `
Scalar {
  "range": Range {
    "end": 8,
    "start": 1,
  },
  "raw": "'value'",
  "type": "SINGLE",
  "valueRange": Range {
    "end": 8,
    "start": 1,
  },
}
`;

exports[`parse *alias bare 1`] = `
Scalar {
  "range": Range {
    "end": 6,
    "start": 0,
  },
  "raw": "alias",
  "type": "ALIAS",
  "valueRange": Range {
    "end": 6,
    "start": 1,
  },
}
`;

exports[`parse *alias complex mapping key 1`] = `
Scalar {
  "range": Range {
    "end": 9,
    "start": 2,
  },
  "raw": "alias",
  "type": "ALIAS",
  "valueRange": Range {
    "end": 8,
    "start": 3,
  },
}
`;

exports[`parse *alias flow seq value 1`] = `
Scalar {
  "range": Range {
    "end": 9,
    "start": 2,
  },
  "raw": "alias",
  "type": "ALIAS",
  "valueRange": Range {
    "end": 8,
    "start": 3,
  },
}
`;

exports[`parse *alias indented block 1`] = `
Scalar {
  "range": Range {
    "end": 12,
    "start": 6,
  },
  "raw": "alias",
  "type": "ALIAS",
  "valueRange": Range {
    "end": 12,
    "start": 7,
  },
}
`;

exports[`parse *alias newline before & after 1`] = `
Scalar {
  "range": Range {
    "end": 7,
    "start": 1,
  },
  "raw": "alias",
  "type": "ALIAS",
  "valueRange": Range {
    "end": 7,
    "start": 2,
  },
}
`;

exports[`parse *alias seq value 1`] = `
Scalar {
  "range": Range {
    "end": 8,
    "start": 2,
  },
  "raw": "alias",
  "type": "ALIAS",
  "valueRange": Range {
    "end": 8,
    "start": 3,
  },
}
`;

exports[`parse *alias with comment 1`] = `
Scalar {
  "commentRange": Range {
    "end": 26,
    "start": 11,
  },
  "range": Range {
    "end": 26,
    "start": 3,
  },
  "raw": "alias",
  "rawComment": "comment # here!",
  "type": "ALIAS",
  "valueRange": Range {
    "end": 9,
    "start": 4,
  },
}
`;

exports[`parse *alias with props 1`] = `
Scalar {
  "anchor": "anchor",
  "range": Range {
    "end": 22,
    "start": 2,
  },
  "raw": "alias",
  "tag": "tag!",
  "type": "ALIAS",
  "valueRange": Range {
    "end": 22,
    "start": 17,
  },
}
`;

exports[`parse >block bare 1`] = `
Scalar {
  "blockStyle": ">",
  "range": Range {
    "end": 34,
    "start": 0,
  },
  "raw": "      #multiline
  
      	block",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 34,
    "start": 2,
  },
}
`;

exports[`parse >block complex mapping key 1`] = `
Scalar {
  "blockStyle": ">",
  "range": Range {
    "end": 38,
    "start": 4,
  },
  "raw": "      #multiline
  
      	block",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 38,
    "start": 6,
  },
}
`;

exports[`parse >block flow seq value 1`] = `
Scalar {
  "blockStyle": ">",
  "range": Range {
    "end": 38,
    "start": 4,
  },
  "raw": "      #multiline
  
      	block",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 38,
    "start": 6,
  },
}
`;

exports[`parse >block indented block 1`] = `
Scalar {
  "blockStyle": ">",
  "range": Range {
    "end": 40,
    "start": 6,
  },
  "raw": "      #multiline
  
      	block",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 40,
    "start": 8,
  },
}
`;

exports[`parse >block literal with header 1`] = `
Scalar {
  "blockStyle": "|+2",
  "range": Range {
    "end": 39,
    "start": 3,
  },
  "raw": "      #multiline
  
      	block",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 39,
    "start": 7,
  },
}
`;

exports[`parse >block newline before & after 1`] = `
Scalar {
  "blockStyle": ">",
  "range": Range {
    "end": 35,
    "start": 1,
  },
  "raw": "      #multiline
  
      	block",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 35,
    "start": 3,
  },
}
`;

exports[`parse >block seq value 1`] = `
Scalar {
  "blockStyle": ">",
  "range": Range {
    "end": 36,
    "start": 2,
  },
  "raw": "      #multiline
  
      	block",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 36,
    "start": 4,
  },
}
`;

exports[`parse >block with comment 1`] = `
Scalar {
  "blockStyle": ">",
  "commentRange": Range {
    "end": 21,
    "start": 6,
  },
  "range": Range {
    "end": 54,
    "start": 3,
  },
  "raw": "      #multiline
  
      	block",
  "rawComment": "comment # here!",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 54,
    "start": 22,
  },
}
`;

exports[`parse >block with props 1`] = `
Scalar {
  "anchor": "anchor",
  "blockStyle": ">",
  "range": Range {
    "end": 50,
    "start": 2,
  },
  "raw": "      #multiline
  
      	block",
  "tag": "tag!",
  "type": "BLOCK",
  "valueRange": Range {
    "end": 50,
    "start": 18,
  },
}
`;

exports[`parse multi-line plain bare 1`] = `
Scalar {
  "range": Range {
    "end": 49,
    "start": 0,
  },
  "raw": ":first#
      ? :multi line
  
      	plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 49,
    "start": 0,
  },
}
`;

exports[`parse multi-line plain complex mapping key 1`] = `
Scalar {
  "range": Range {
    "end": 53,
    "start": 4,
  },
  "raw": ":first#
      ? :multi line
  
      	plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 53,
    "start": 4,
  },
}
`;

exports[`parse multi-line plain flow seq value 1`] = `
Scalar {
  "range": Range {
    "end": 53,
    "start": 4,
  },
  "raw": ":first#
      ? :multi line
  
      	plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 53,
    "start": 4,
  },
}
`;

exports[`parse multi-line plain indented block 1`] = `
Scalar {
  "range": Range {
    "end": 55,
    "start": 6,
  },
  "raw": ":first#
      ? :multi line
  
      	plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 55,
    "start": 6,
  },
}
`;

exports[`parse multi-line plain newline before & after 1`] = `
Scalar {
  "range": Range {
    "end": 50,
    "start": 1,
  },
  "raw": ":first#
      ? :multi line
  
      	plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 50,
    "start": 1,
  },
}
`;

exports[`parse multi-line plain seq value 1`] = `
Scalar {
  "range": Range {
    "end": 51,
    "start": 2,
  },
  "raw": ":first#
      ? :multi line
  
      	plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 51,
    "start": 2,
  },
}
`;

exports[`parse multi-line plain with comment 1`] = `
Scalar {
  "commentRange": Range {
    "end": 20,
    "start": 5,
  },
  "range": Range {
    "end": 62,
    "start": 3,
  },
  "raw": "      ? :multi line
  
      	plain value",
  "rawComment": "comment # here!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 62,
    "start": 21,
  },
}
`;

exports[`parse multi-line plain with props 1`] = `
Scalar {
  "anchor": "anchor",
  "range": Range {
    "end": 65,
    "start": 2,
  },
  "raw": ":first#
      ? :multi line
  
      	plain value",
  "tag": "tag!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 65,
    "start": 16,
  },
}
`;

exports[`parse single-line plain bare 1`] = `
Scalar {
  "range": Range {
    "end": 11,
    "start": 0,
  },
  "raw": "plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 11,
    "start": 0,
  },
}
`;

exports[`parse single-line plain complex mapping key 1`] = `
Scalar {
  "range": Range {
    "end": 14,
    "start": 2,
  },
  "raw": "plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 13,
    "start": 2,
  },
}
`;

exports[`parse single-line plain empty 1`] = `
Scalar {
  "range": Range {
    "end": 2,
    "start": 2,
  },
  "raw": "",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 2,
    "start": 2,
  },
}
`;

exports[`parse single-line plain empty in flow 1`] = `
Scalar {
  "range": Range {
    "end": 6,
    "start": 5,
  },
  "raw": "",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 6,
    "start": 6,
  },
}
`;

exports[`parse single-line plain escaped 1`] = `
Scalar {
  "range": Range {
    "end": 6,
    "start": 0,
  },
  "raw": "-#:] ,",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 6,
    "start": 0,
  },
}
`;

exports[`parse single-line plain escaped in flow 1`] = `
Scalar {
  "range": Range {
    "end": 3,
    "start": 0,
  },
  "raw": "-#:",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 3,
    "start": 0,
  },
}
`;

exports[`parse single-line plain flow seq value 1`] = `
Scalar {
  "range": Range {
    "end": 14,
    "start": 2,
  },
  "raw": "plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 13,
    "start": 2,
  },
}
`;

exports[`parse single-line plain indented block 1`] = `
Scalar {
  "range": Range {
    "end": 17,
    "start": 6,
  },
  "raw": "plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 17,
    "start": 6,
  },
}
`;

exports[`parse single-line plain newline before & after 1`] = `
Scalar {
  "range": Range {
    "end": 12,
    "start": 1,
  },
  "raw": "plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 12,
    "start": 1,
  },
}
`;

exports[`parse single-line plain seq value 1`] = `
Scalar {
  "range": Range {
    "end": 13,
    "start": 2,
  },
  "raw": "plain value",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 13,
    "start": 2,
  },
}
`;

exports[`parse single-line plain with comment 1`] = `
Scalar {
  "commentRange": Range {
    "end": 31,
    "start": 16,
  },
  "range": Range {
    "end": 31,
    "start": 3,
  },
  "raw": "plain value",
  "rawComment": "comment # here!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 14,
    "start": 3,
  },
}
`;

exports[`parse single-line plain with props 1`] = `
Scalar {
  "anchor": "anchor",
  "range": Range {
    "end": 27,
    "start": 2,
  },
  "raw": "plain value",
  "tag": "tag!",
  "type": "PLAIN",
  "valueRange": Range {
    "end": 27,
    "start": 16,
  },
}
`;
